css/hamburguesaestilos.css
.menu{
    display: flex;
    align-items: center;
}


.menu ul{
    display: flex;
}

.menu ul li{
    list-style: none;
    margin-left: 36px;
}


.menu nav img{
    display: none;
}

.menu #btn_menu{
    display: none;
}



/*Haciendo la página Responsive*/

@media screen and (max-width:800px){

    header{
        padding: 0px;
    }

}

@media screen and (max-width: 800px){

    .menu nav{
        position: fixed;
        top: 0;
        right: -250px;
        background: rgb(245, 245, 245);
        width: 250px;
        height: 100vh;
        padding: 40px;
        z-index: 1;
        transition: all 300ms;
        display: flex;
        font-size:18px;
        align-items: center;
    }

    .menu ul{
        flex-direction: column;
        margin-top: 40px;
        margin-right:90px;
 
    }

    .menu ul li{
        margin-top: 30px;
        margin-left: 0;
    }

    .menu ul li a{
        color: black;
    }

    #selected{
        background: none;
        padding: 0px;
        border-radius: none;
        color: #F6615D;
    }

    .menu nav img{
        display: block;
        width: 60px;
    }

    #back_menu{
        position: fixed;
        top: 0;
        left: 0;
        width: 100%;
        height: 100vh;
        background: rgba(0,0,0,0.3);
        display: none;
    }

    .menu #btn_menu{
        display: flex;
        align-items: center;
        justify-content: center;
        width: 50px;
        height: 50px;
        background: rgba(255, 255, 255, 0.1);
        font-size: 24px;
        border-radius: 50px;
        cursor: pointer;
        transition: all 300ms;
    }

    .menu #btn_menu:hover{
        background: rgba(255, 255, 255, 0.2);
    }
}


/* Móvil: mostrar los enlaces del menú a la derecha (sin hamburguesa) */
@media screen and (max-width: 800px){

    .menu #btn_menu{
        display: none;
    }

    #back_menu{
        display: none !important;
    }

    .nav{
        padding-left: 25px;
        padding-right: 10px;
    }

    .menu{
        margin-right: 0;
        margin-left: auto;
    }

    .menu ul li:last-child{
        margin-right: 0;
    }

    .menu nav{
        position: static;
        right: auto;
        top: auto;
        background: transparent;
        width: auto;
        height: auto;
        padding: 0;
        flex-direction: row;
    }

    .menu nav img{
        display: none;
    }

    .menu ul{
        flex-direction: row;
        margin: 0;
        align-items: center;
    }

    .menu ul li{
        margin-top: 0;
        margin-left: 18px;
    }

    .menu ul li a{
        font-size: 15px;
    }
}

